vcs/specs/parser/fail/statements/incomplete_field_access.vr
// @test: parse-fail
// @level: L0
// @tags: parser, statements, expression, field, incomplete, error
// @description: Test incomplete field access expression
// @expected-error: E048

fn test() {
    let obj = create();
    obj.;
}
